###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name="workspace",
    version="0.0.0",
)

bazel_dep(name = "platforms", version = "0.0.7")

bazel_dep(
    name="googletest",
    version="1.14.0",
)

bazel_dep(
    name="nlohmann_json",
    version="3.11.2"
)

bazel_dep(
    name="yaml-cpp",
    version="0.8.0"
)