cc_library(
    name="lib",
    srcs=[
        "src/bolero/config.cpp",
        "src/bolero/config/config_utils.cpp",
        ],
    hdrs=[
        "src/bolero/config.hpp",
        "src/bolero/config/config_utils.hpp",
        "src/bolero/class_factory.hpp",
        "src/bolero/task.hpp",
        ],
    includes = [
        "src",
        "@eigen//",
        ],
    deps=[
        "@nlohmann_json//:json",
        "@yaml-cpp//:yaml-cpp",
        "@eigen//:eigen"
    ],
    visibility=["//visibility:public"],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default":   ["-std=c++20"],
    }),
)

cc_test(
    name="test",
    srcs=[
        "test/test_main.cpp",
        "test/bolero/test_config.cpp",
        "test/bolero/test_class_factory.cpp",
        "test/bolero/test_task.cpp",
        ],
    deps=[
        "//bolero:lib",
        "@googletest//:gtest_main",
    ],
    visibility=["//visibility:private"],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default":   ["-std=c++20"],
    }),
)

filegroup(
    name = "doxygen_srcs",
    srcs = glob([
        "src/bolero/**/*.hpp",
        "src/bolero/**/*.cpp",
    ]),
    visibility = ["//visibility:public"],
)
