
cc_library(
    name="lib",
    srcs= glob(["src/bolero/**/*.cpp"]),
    hdrs= glob(["src/bolero/**/*.hpp"]),
    includes = [
        "src",
        "@eigen//",
        ],
    deps=[
        "@nlohmann_json//:json",
        "@yaml-cpp//:yaml-cpp",
        "@eigen//:eigen",
        "@spdlog//:spdlog",  
        "@fmt//:fmt",        
        "@asio//:asio",
        "//externals/cxxopts:cxxopts",
    ],
    strip_include_prefix = "src",
    include_prefix = "",
    visibility=["//visibility:public"],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default":   ["-std=c++20"],
    }),
)

cc_test(
    name="test",
    srcs = glob(["test/**/*.cpp"]),
    deps=[
        "//bolero:lib",
        "@googletest//:gtest_main",
    ],
    visibility=["//visibility:private"],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default":   ["-std=c++20"],
    }),
)

filegroup(
    name = "doxygen_srcs",
    srcs = glob([
        "src/bolero/**/*.hpp",
        "src/bolero/**/*.cpp",
    ]),
    visibility = ["//visibility:public"],
)
