package(default_visibility = ["//visibility:public"])

filegroup(
    name = "config",
    srcs = ["config/config.json"],
)
cc_binary(
    name = "app",
    srcs = [
        "src/main.cpp",
    ],
    includes = [
    ],
    data = [":config"],
    deps = [
        "//bolero:lib",
    ],
    copts = select({
        "@platforms//os:windows": ["/std:c++20"],
        "//conditions:default":   ["-std=c++20"],
    }),
)